--- a/css/home.css
+++ b/css/home.css
@@ -111,3 +111,29 @@ header .buttons button.see-all {
     background-color: #2d6a4f;
 }
 
+
+header .pesquisar {
+    position: relative;
+    width: 30%;
+    margin-top: 10px;
+}
+
+header .pesquisar input {
+    width: 100%;
+    padding: 18px 20px;
+    border: none;
+    border-radius: 18px;
+    box-shadow: 0px 4px 70px -10px rgba(0, 0, 0, 0.6);
+    outline: none;
+}
+
+header .pesquisar button {
+    position: absolute;
+    right: 0;
+    padding: 12px;
+    font-size: 24px;
+    border: none;
+    background-color:transparent;
+    cursor: pointer;
+}
+
