--- a/css/home.css
+++ b/css/home.css
@@ -137,3 +137,64 @@ header .pesquisar button {
     cursor: pointer;
 }
 
+.content{
+    background-color: #f8f8fa;
+    padding: 100px 80px 0;
+}
+
+.content .separator{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 30px;
+}
+
+.content .separator a,
+.content .articles .item .bottom a{
+    display: flex;
+    align-items: center;
+    gap: 2px;
+    color: #2d6a4f;
+    font-size: 14px;
+}
+
+.content .separator a i,
+.content .articles .item .bottom a i{
+    font-size: 18px;
+}
+
+.content .courses,
+.content .podcasts{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    row-gap: 20px;
+    margin-bottom: 100px;
+}
+
+.content .courses .item,
+.content .podcasts .item{
+    width: 30%;
+}
+
+.content .courses .item .top,
+.content .courses .item .bottom,
+.content .podcasts .item .top,
+.content .podcasts .item .bottom,
+.content .articles .item .top,
+.content .articles .item .bottom{
+    display: flex;
+    gap: 10px;
+    background-color: #fff;
+    padding: 14px;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+    border-radius: 18px;
+    border-bottom: 1px dashed #888;
+}
+
+.content .courses .item .top img{
+    width: 120px;
+    height: 120px;
+    object-fit: cover;
+    border-radius: 8px;
+}
