--- a/css/home.css
+++ b/css/home.css
@@ -531,5 +531,87 @@ footer .columns .col.last .social-links i{
         width: 45%;
         flex: none;
     }
+}
+
+@media screen and (max-width:768px) {
+    
+    nav{
+        padding: 0 30px;
+    }
+
+    nav .left .links{
+        font-size: 13px;
+        gap: 14px;
+    }
+
+    nav .buttons a:first-child{
+        display: none;
+    }
+
+    header .info h1{
+        font-size: 26px;
+    }
+
+    header .info p{
+        font-size: 16px;
+    }
+
+    header .search{
+        width: 70%;
+    }
+
+    .content{
+        padding: 100px 30px 0;
+    }
+
+    .content .courses .item .top{
+        height: 324px;
+    }
+
+    .content .courses .item .bottom .discount .time{
+        display: none;
+    }
+
+    .content .courses .item .bottom .discount > h5{
+        width: 100%;
+    }
+
+    .content .articles .item .top img{
+        height: 160px;
+    }
+
+    footer{
+        padding: 60px 50px 30px;
+    }
+
+}
+
+@media screen and (max-width:576px) {
+    
+    nav .left .links a:nth-child(5),
+    nav .left .links a:nth-child(6){
+        display: none;
+    }
+
+    .content .courses .item .top .info a,
+    .content .podcasts .item .top .info a{
+        font-size: 14px;
+    }
+
+    .content .comments .right .item p{
+        font-size: 13px;
+    }
+
+    .content .podcasts .item .top .info p{
+        font-size: 11px;
+    }
+
+    .content .podcasts .item .bottom .duration i{
+        font-size: 20px;
+    }
+
+    footer{
+        padding: 60px 30px 30px;
+    }
 
 }
